# trading-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  disclaimer.md  docker-compose.yml  exchanges.json  install.sh  main.py  privacy.md  pyproject.toml  refund.md  requirements.txt  setup_gui.py  start.bat  terms.md
agent/: chart.py  coins.py  config.py  daily_secret.py  license.py  llm_parser.py  logger.py  main.py  notifier.py  order_executor.py  personal_bot.py  pnl_image.py  position_monitor.py  price_watcher.py  risk_manager.py  signal_client.py  state.py  tg_channel_listener.py.bak  version.py
agent/signal_parser/: patterns.json  regex_parser.py  validator.py
gui/: app.py  env_manager.py
gui/templates/: index.html
tests/: test_agent.py  test_parcer.py  test_validator.py
